# Grussauftraege-KFR

./: .gitignore  README.md  pyproject.toml
network_degree/: Network of illocution 'grüßen' - August Wilhelm.csv  Network of illocutions 'grüßen' (red) and 'grüßen lassen' (blue) with min. count 2 - August Wilhelm.csv  grüßen lassen_Berlin_triples - August Wilhelm, Friedrich, Dorothea und Caroline Schlegels.csv  grüßen lassen_Jena_triples - August Wilhelm, Friedrich, Dorothea und Caroline Schlegels.csv  grüßen lassen_Leipzig_triples - August Wilhelm, Friedrich, Dorothea und Caroline Schlegels.csv  grüßen lassen_Paris_triples - August Wilhelm, Friedrich, Dorothea und Caroline Schlegels.csv  grüßen lassen_and_grüßen_in_out_degree - August Wilhelm, Friedrich, Dorothea und Caroline Schlegels.csv  grüßen lassen_in_out_degree - August Wilhelm, Friedrich, Dorothea und Caroline Schlegels.csv  grüßen_Berlin_triples - August Wilhelm, Friedrich, Dorothea und Caroline Schlegels.csv  grüßen_Jena_triples - August Wilhelm, Friedrich, Dorothea und Caroline Schlegels.csv  grüßen_Paris_triples - August Wilhelm, Friedrich, Dorothea und Caroline Schlegels.csv  grüßen_in_out_degree - August Wilhelm, Friedrich, Dorothea und Caroline Schlegels.csv
src/Grussauftraege-KFR/tools/: network.py
