[project]
name = "Grussauftraege-KFR"
version = "0.1.0"
description = ""
authors = [
    {name = "Gwanghun Park", email = "gwanghun.park.privat@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel (>=6.29.5,<7.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "networkx (>=3.5,<4.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
]

[tool.poetry]
packages = [{include = "Grussauftraege-KFR", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
